✨ Refonte complète UI avec glassmorphism et optimisations
- Style glassmorphism appliqué aux filtres avec effet frosted glass
- Police Inter intégrée pour une typographie moderne
- Titres de catégories alignés à gauche avec meilleure hiérarchie
- Interface compacte optimisée sans scroll
- Suppression des onglets multiples pour un design unifié
- Filtres épurés sans bordures avec fond transparent
- Scroll amélioré avec scrollbar visible et fonctionnelle
- Texte uniforme sans mise en avant des majuscules
- États hover et selected avec transitions fluides
- Expérience utilisateur optimisée et minimaliste

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
             <!-- Header avec titre et bouton fermer -->
             <div class="filter-header">
                 <div class="filter-title">
-                    <span class="filter-title-text" id="filter-title-text">Reformulation</span>
+                    <span class="filter-title-text" id="filter-title-text">Rephrasing</span>
                 </div>
                 <button class="close-button" id="panel-close">
-                    <img src="icone/x.svg" class="close-icon" alt="Fermer">
+                    <img src="icone/x.svg" class="close-icon" alt="Close">
                 </button>
             </div>
 
             <!-- Options de filtres (affichées selon le contexte) -->
             <div class="filter-body" id="panel-options">
-                <!-- Options Reformulation -->
+                <!-- Options Rephrasing -->
                 <div id="options-rephrase" class="options-group" style="display: none;">
                     <div class="filter-section">
                         <div class="section-label">STYLE</div>
@@ -107,7 +107,7 @@
                             </button>
                             <button class="filter-option selected" data-filter="rephrase-length" data-value="same">
                                 <img src="icone/arrow-right.svg" class="filter-option-icon" alt="">
-                                <span>Keep Same</span>
+                                <span>Maintain</span>
                             </button>
                             <button class="filter-option" data-filter="rephrase-length" data-value="longer">
                                 <img src="icone/arrow-up.svg" class="filter-option-icon" alt="">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
 
-                <!-- Options Amélioration -->
+                <!-- Options Improvement -->
                 <div id="options-improvement" class="options-group" style="display: none;">
                     <div class="filter-section">
                         <div class="section-label">GOAL</div>
@@ -208,7 +208,7 @@
                             </button>
                             <button class="filter-option" data-filter="prompt-format" data-value="bullet">
                                 <img src="icone/minus.svg" class="filter-option-icon" alt="">
-                                <span>Bullet Points</span>
+                                <span>Bullets</span>
                             </button>
                             <button class="filter-option" data-filter="prompt-format" data-value="numbered">
                                 <img src="icone/arrow-right.svg" class="filter-option-icon" alt="">
@@ -218,7 +218,7 @@
                     </div>
                 </div>
 
-                <!-- Options Traduction -->
+                <!-- Options Translation -->
                 <div id="options-translation" class="options-group" style="display: none;">
                     <div class="filter-section">
                         <div class="section-label">TARGET LANGUAGE</div>
