feat: Add LettA AI provider integration
- Add LettA AI as new provider option
- Configure LettA functions URLs in Supabase config
- Add LettA routing in script.js with callSupabaseLettA()
- Update menu providers to include LettA AI
- Increase timeout to 2 minutes for LettA AI performance
- Fix drag and drop functionality for Electron window
- Improve menu spacing and visual design

--- a/index.html
+++ b/index.html
@@ -275,6 +275,63 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Options Voice -->
+                <div id="options-voice" class="options-group" style="display: none;">
+                    <div class="filter-section">
+                        <div class="section-label">LANGUAGE</div>
+                        <div class="filter-options">
+                            <button class="filter-option selected" data-filter="voice-language" data-value="en">
+                                <span>🇬🇧 English</span>
+                            </button>
+                            <button class="filter-option" data-filter="voice-language" data-value="fr">
+                                <span>🇫🇷 French</span>
+                            </button>
+                            <button class="filter-option" data-filter="voice-language" data-value="es">
+                                <span>🇪🇸 Spanish</span>
+                            </button>
+                            <button class="filter-option" data-filter="voice-language" data-value="de">
+                                <span>🇩🇪 German</span>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="filter-section">
+                        <div class="section-label">QUALITY</div>
+                        <div class="filter-options">
+                            <button class="filter-option selected" data-filter="voice-quality" data-value="standard">
+                                <img src="icone/scale.svg" class="filter-option-icon" alt="">
+                                <span>Standard</span>
+                            </button>
+                            <button class="filter-option" data-filter="voice-quality" data-value="enhanced">
+                                <img src="icone/sparkles.svg" class="filter-option-icon" alt="">
+                                <span>Enhanced</span>
+                            </button>
+                            <button class="filter-option" data-filter="voice-quality" data-value="premium">
+                                <img src="icone/star-06.svg" class="filter-option-icon" alt="">
+                                <span>Premium</span>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="filter-section">
+                        <div class="section-label">SPEED</div>
+                        <div class="filter-options">
+                            <button class="filter-option" data-filter="voice-speed" data-value="slow">
+                                <img src="icone/arrow-down.svg" class="filter-option-icon" alt="">
+                                <span>Slow</span>
+                            </button>
+                            <button class="filter-option selected" data-filter="voice-speed" data-value="normal">
+                                <img src="icone/arrow-right.svg" class="filter-option-icon" alt="">
+                                <span>Normal</span>
+                            </button>
+                            <button class="filter-option" data-filter="voice-speed" data-value="fast">
+                                <img src="icone/arrow-up.svg" class="filter-option-icon" alt="">
+                                <span>Fast</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
