fix: Enable drag for window movement and reduce panel size
- Activate -webkit-app-region: drag on .floating-panel
- Keep buttons interactive with -webkit-app-region: no-drag
- Remove draggable-area class from index.html
- Reduce button size from 32px to 28px
- Reduce button gap from 12px to 8px
- Reduce button padding from 12px to 8px
- Reduce hover zoom effect from scale(1.02) to scale(1.01)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="floating-panel draggable-area">
+    <div class="floating-panel">
         <!-- Angular gradient border -->
         <div class="gradient-border"></div>
         
