feat: Per-action provider selection and menu options implementation
- Add individual provider selection for each action (Rephrase, Translate, Enhance, Voice) via menu bar
- Implement voice options support (language, quality, speed) in getOptions()
- Pass all menu options to Supabase functions (OpenRouter functions support target, style, context, type, tone, length, corrections, goal, audience, detail, format)
- Fix menu hover behavior: only opens after 1.5s hover, never on click
- Fix instant switching between buttons (left to right, right to left)
- Reset suppression flags only when mouse leaves Stylo area
- Add drag handle at top for window movement
- Add 10px bottom padding to menu for better aesthetics
- Remove unnecessary zoom effect on hover
- Organize Supabase functions into provider-specific folders (openrouter)
- Add package-lock.json for Supabase functions

Breaking changes:
- Supabase functions now require options parameter (breaking change for old implementations)
- Provider selection now per-action instead of global

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="floating-panel">
         <!-- Angular gradient border -->
         <div class="gradient-border"></div>
+        <!-- Thin drag handle at the very top to move the window without affecting buttons -->
+        <div class="drag-handle" aria-hidden="true"></div>
         
         <div class="button-container">
             <!-- Button 1: Text Rephrasing (pen tool) -->
